fix swagger and controllers auth
